   passed by panel.superpose to the 'panel.groups' function

 o Specifying 'auto.key' as a list now produces a legend even in the
   absence of 'groups', provided a 'text' component has been included

 o The 'layout' argument now accepts NA for number of columns or rows.

 o Scale limits 'xlim' & 'ylim' can have one NA to fix only one side.


Changes in lattice 0.17
=======================

new features
------------

 o New function simpleTheme() for creating nested lists without
   specifying the nesting structure (which is guessed)

 o Support for lattice.option(print.function) which is the function
   actually used when print.trellis() is called

 o New argument 'box.width' wherever 'box.ratio' is available (e.g.,
   panel.bwplot, panel.barchart, etc.), to specify absolute thickness
   (of boxes, bars, etc.)

 o New panel.refline() function, same as panel.abline(), but with
   default parameters from the "reference.line" settings.

 o parallel() has a new 'horizontal.axis' argument; when FALSE, the
   axes are vertical and are stacked side by side.

 o densityplot() now supports weights.

 o dotplot.table() etc. allow change of orientation (horizontal=FALSE).

 o New function panel.identify.cloud() to interactively label
   three-dimensional scatterplots.

 o Added support for notches in panel.bwplot (based on patch from Mike
   Kay)

 o New panel function panel.smoothScatter (relocated from Bioconductor
   package geneplotter)

 o Added German translations (contributed by Chris Leick)

 o reordered documentation to make PDF manual more readable

bug fixes
---------

 o Make translations available (they were never actually installed before)


Changes in lattice 0.16
=======================

changes in behaviour
--------------------

 o 'x' in dotplot(~x, data) etc now gets names(x) set to
   rownames(data).  Update: this feature has now been removed, as the
   resulting behaviour is undesirable for bwplot()
